cmake_minimum_required(VERSION 3.5)
project(mandel)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    js/three/cameras/CombinedCamera.js
    js/three/controls/DeviceOrientationControls.js
    js/three/controls/EditorControls.js
    js/three/controls/FirstPersonControls.js
    js/three/controls/FlyControls.js
    js/three/controls/MouseControls.js
    js/three/controls/OrbitControls.js
    js/three/controls/OrthographicTrackballControls.js
    js/three/controls/PointerLockControls.js
    js/three/controls/TrackballControls.js
    js/three/controls/TransformControls.js
    js/three/controls/VRControls.js
    js/three/crossfade/gui.js
    js/three/crossfade/scenes.js
    js/three/crossfade/transition.js
    js/three/curves/NURBSCurve.js
    js/three/curves/NURBSSurface.js
    js/three/curves/NURBSUtils.js
    js/three/effects/AnaglyphEffect.js
    js/three/effects/AsciiEffect.js
    js/three/effects/ParallaxBarrierEffect.js
    js/three/effects/StereoEffect.js
    js/three/effects/VREffect.js
    js/three/exporters/OBJExporter.js
    js/three/exporters/SceneExporter.js
    js/three/exporters/STLBinaryExporter.js
    js/three/exporters/STLExporter.js
    js/three/exporters/TypedGeometryExporter.js
    js/three/geometries/ConvexGeometry.js
    js/three/geometries/DecalGeometry.js
    js/three/geometries/hilbert2D.js
    js/three/geometries/hilbert3D.js
    js/three/libs/dat.gui.min.js
    js/three/libs/msgpack-js.js
    js/three/libs/pnltri.min.js
    js/three/libs/require.js
    js/three/libs/stats.min.js
    js/three/libs/system.min.js
    js/three/libs/tween.min.js
    js/three/loaders/ctm/license/js-lzma.txt
    js/three/loaders/ctm/license/js-openctm.txt
    js/three/loaders/ctm/license/OpenCTM.txt
    js/three/loaders/ctm/ctm.js
    js/three/loaders/ctm/CTMLoader.js
    js/three/loaders/ctm/CTMWorker.js
    js/three/loaders/ctm/lzma.js
    js/three/loaders/deprecated/SceneLoader.js
    js/three/loaders/gltf/glTF-parser.js
    js/three/loaders/gltf/glTFAnimation.js
    js/three/loaders/gltf/glTFLoader.js
    js/three/loaders/gltf/glTFLoaderUtils.js
    js/three/loaders/AssimpJSONLoader.js
    js/three/loaders/AWDLoader.js
    js/three/loaders/BabylonLoader.js
    js/three/loaders/BinaryLoader.js
    js/three/loaders/ColladaLoader.js
    js/three/loaders/DDSLoader.js
    js/three/loaders/MTLLoader.js
    js/three/loaders/OBJLoader.js
    js/three/loaders/OBJMTLLoader.js
    js/three/loaders/PDBLoader.js
    js/three/loaders/PLYLoader.js
    js/three/loaders/PVRLoader.js
    js/three/loaders/RGBELoader.js
    js/three/loaders/STLLoader.js
    js/three/loaders/SVGLoader.js
    js/three/loaders/TGALoader.js
    js/three/loaders/UTF8Loader.js
    js/three/loaders/VRMLLoader.js
    js/three/loaders/VTKLoader.js
    js/three/math/ColorConverter.js
    js/three/math/Lut.js
    js/three/modifiers/ExplodeModifier.js
    js/three/modifiers/SubdivisionModifier.js
    js/three/modifiers/TessellateModifier.js
    js/three/objects/ShadowMesh.js
    js/three/postprocessing/AdaptiveToneMappingPass.js
    js/three/postprocessing/BloomPass.js
    js/three/postprocessing/BokehPass.js
    js/three/postprocessing/DotScreenPass.js
    js/three/postprocessing/EffectComposer.js
    js/three/postprocessing/FilmPass.js
    js/three/postprocessing/GlitchPass.js
    js/three/postprocessing/MaskPass.js
    js/three/postprocessing/RenderPass.js
    js/three/postprocessing/SavePass.js
    js/three/postprocessing/ShaderPass.js
    js/three/postprocessing/TexturePass.js
    js/three/renderers/plugins/DepthPassPlugin.js
    js/three/renderers/CanvasRenderer.js
    js/three/renderers/CSS2DRenderer.js
    js/three/renderers/CSS3DRenderer.js
    js/three/renderers/CSS3DStereoRenderer.js
    js/three/renderers/Projector.js
    js/three/renderers/RaytracingRenderer.js
    js/three/renderers/SoftwareRenderer.js
    js/three/renderers/SVGRenderer.js
    js/three/renderers/WebGLDeferredRenderer.js
    js/three/shaders/BasicShader.js
    js/three/shaders/BleachBypassShader.js
    js/three/shaders/BlendShader.js
    js/three/shaders/BokehShader.js
    js/three/shaders/BokehShader2.js
    js/three/shaders/BrightnessContrastShader.js
    js/three/shaders/ColorCorrectionShader.js
    js/three/shaders/ColorifyShader.js
    js/three/shaders/ConvolutionShader.js
    js/three/shaders/CopyShader.js
    js/three/shaders/DigitalGlitch.js
    js/three/shaders/DOFMipMapShader.js
    js/three/shaders/DotScreenShader.js
    js/three/shaders/EdgeShader.js
    js/three/shaders/EdgeShader2.js
    js/three/shaders/FilmShader.js
    js/three/shaders/FocusShader.js
    js/three/shaders/FresnelShader.js
    js/three/shaders/FXAAShader.js
    js/three/shaders/HorizontalBlurShader.js
    js/three/shaders/HorizontalTiltShiftShader.js
    js/three/shaders/HueSaturationShader.js
    js/three/shaders/KaleidoShader.js
    js/three/shaders/LuminosityShader.js
    js/three/shaders/MirrorShader.js
    js/three/shaders/NormalDisplacementShader.js
    js/three/shaders/NormalMapShader.js
    js/three/shaders/OceanShaders.js
    js/three/shaders/ParallaxShader.js
    js/three/shaders/RGBShiftShader.js
    js/three/shaders/SepiaShader.js
    js/three/shaders/SSAOShader.js
    js/three/shaders/TechnicolorShader.js
    js/three/shaders/ToneMapShader.js
    js/three/shaders/TriangleBlurShader.js
    js/three/shaders/UnpackDepthRGBAShader.js
    js/three/shaders/VerticalBlurShader.js
    js/three/shaders/VerticalTiltShiftShader.js
    js/three/shaders/VignetteShader.js
    js/three/utils/GeometryUtils.js
    js/three/utils/ShadowMapViewer.js
    js/three/utils/UVsDebug.js
    js/three/wip/benchmark/BoxGeometry2.js
    js/three/wip/benchmark/Geometry2.js
    js/three/wip/benchmark/Geometry2Loader.js
    js/three/wip/benchmark/Geometry3.js
    js/three/wip/benchmark/Geometry4.js
    js/three/wip/benchmark/Geometry5.js
    js/three/wip/benchmark/Geometry5b.js
    js/three/wip/benchmark/IndexedGeometry3.js
    js/three/wip/benchmark/IndexedGeometry5.js
    js/three/wip/benchmark/IndexedPlaneGeometry5.js
    js/three/wip/benchmark/PlaneGeometry.js
    js/three/wip/benchmark/PlaneGeometry2.js
    js/three/wip/benchmark/PlaneGeometry2b.js
    js/three/wip/benchmark/PlaneGeometry3.js
    js/three/wip/benchmark/PlaneGeometry5.js
    js/three/wip/benchmark/PlaneGeometry6.js
    js/three/wip/benchmark/PlaneGeometry99.js
    js/three/wip/benchmark/TypedGeometry.js
    js/three/wip/proxies/MultiColor.js
    js/three/wip/proxies/MultiVector3.js
    js/three/wip/proxies/ProxyColor.js
    js/three/wip/proxies/ProxyFace3.js
    js/three/wip/proxies/ProxyVector2.js
    js/three/wip/proxies/ProxyVector3.js
    js/three/wip/proxies/ProxyVector4.js
    js/three/wip/CircleTypedGeometry.js
    js/three/wip/GeometryEditor.js
    js/three/wip/IndexedTypedGeometry.js
    js/three/wip/PlaneTypedGeometry.js
    js/three/wip/ProxyGeometry.js
    js/three/wip/TypedGeometry.js
    js/three/AudioObject.js
    js/three/BlendCharacter.js
    js/three/BlendCharacterGui.js
    js/three/Car.js
    js/three/Cloth.js
    js/three/CurveExtras.js
    js/three/Detector.js
    js/three/ImprovedNoise.js
    js/three/MarchingCubes.js
    js/three/MD2Character.js
    js/three/MD2CharacterComplex.js
    js/three/Mirror.js
    js/three/Ocean.js
    js/three/Octree.js
    js/three/ParametricGeometries.js
    js/three/PRNG.js
    js/three/ShaderDeferred.js
    js/three/ShaderGodRays.js
    js/three/ShaderSkin.js
    js/three/ShaderTerrain.js
    js/three/ShaderToon.js
    js/three/SimplexNoise.js
    js/three/SimulationRenderer.js
    js/three/SkyShader.js
    js/three/Sparks.js
    js/three/three.js
    js/three/three.min.js
    js/three/TypedArrayUtils.js
    js/three/UCSCharacter.js
    js/three/WaterShader.js
    js/gl.js
    js/jquery-1.11.3.min.js
    js/renderer.js
    js/require.js
    js/spectrum.js
    shaders/comp-fragment-shader.glsl
    shaders/comp-vertex-shader.glsl
    shaders/init-fragment-shader.glsl
    shaders/init-vertex-shader.glsl
    shaders/line-fragment-shader.glsl
    shaders/line-vertex-shader.glsl
    shaders/pass-fragment-shader.glsl
    shaders/pass-vertex-shader.glsl
    shaders/trace-fragment-shader.glsl
    shaders/trace-vertex-shader.glsl
    CMakeLists.txt
    fail.png
    mandel.html
    README.md
    style.css
    text.js)

add_executable(mandel ${SOURCE_FILES})